// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 14,
            "justifyContent": "space-around",
            "padding": 14,
            "paddingVertical": 50,
            "width": "80%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "width": "100%",
            },
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "color": "#B4B6BA",
              "height": 60,
              "justifyContent": "flex-end",
              "margin": 0,
              "opacity": 1,
              "padding": 15,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
              "position": "absolute",
              "right": -20,
              "top": -50,
            }
          }
          testID="CloseButton"
        >
          <SvgMock
            color="#B4B6BA"
          />
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "lineHeight": 20,
            "paddingBottom": 20,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Choose a Post Type
      </Text>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#7076B5",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="STORYButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            God Story
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#A97398",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="PRAYER_REQUESTButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Prayer Request
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFA178",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="QUESTIONButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Spiritual Question
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FD726D",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="HELP_REQUESTButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Community Need
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#B4B6BA",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="THOUGHTButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            What's on Your Mind
          </Text>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`renders correctly for admin 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 14,
            "justifyContent": "space-around",
            "padding": 14,
            "paddingVertical": 50,
            "width": "80%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "width": "100%",
            },
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "color": "#B4B6BA",
              "height": 60,
              "justifyContent": "flex-end",
              "margin": 0,
              "opacity": 1,
              "padding": 15,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
              "position": "absolute",
              "right": -20,
              "top": -50,
            }
          }
          testID="CloseButton"
        >
          <SvgMock
            color="#B4B6BA"
          />
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "lineHeight": 20,
            "paddingBottom": 20,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Choose a Post Type
      </Text>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
          ]
        }
      >
        <SvgMock
          color="#ECEEF2"
        />
        <Text
          style={
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "lineHeight": 24,
              "paddingHorizontal": 10,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Post as You
        </Text>
        <SvgMock
          color="#ECEEF2"
        />
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#7076B5",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="STORYButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            God Story
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#A97398",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="PRAYER_REQUESTButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Prayer Request
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFA178",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="QUESTIONButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Spiritual Question
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FD726D",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="HELP_REQUESTButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Community Need
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#B4B6BA",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="THOUGHTButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            What's on Your Mind
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 20,
            },
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
          ]
        }
      >
        <SvgMock
          color="#ECEEF2"
          width="21"
        />
        <Text
          style={
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "lineHeight": 24,
              "paddingHorizontal": 10,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Post as Owner/Admin
        </Text>
        <SvgMock
          color="#ECEEF2"
          width="21"
        />
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#505256",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="ANNOUNCEMENTButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Announcement
          </Text>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`renders correctly for owner 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 14,
            "justifyContent": "space-around",
            "padding": 14,
            "paddingVertical": 50,
            "width": "80%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "width": "100%",
            },
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "color": "#B4B6BA",
              "height": 60,
              "justifyContent": "flex-end",
              "margin": 0,
              "opacity": 1,
              "padding": 15,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
              "position": "absolute",
              "right": -20,
              "top": -50,
            }
          }
          testID="CloseButton"
        >
          <SvgMock
            color="#B4B6BA"
          />
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "lineHeight": 20,
            "paddingBottom": 20,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Choose a Post Type
      </Text>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
          ]
        }
      >
        <SvgMock
          color="#ECEEF2"
        />
        <Text
          style={
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "lineHeight": 24,
              "paddingHorizontal": 10,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Post as You
        </Text>
        <SvgMock
          color="#ECEEF2"
        />
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#7076B5",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="STORYButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            God Story
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#A97398",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="PRAYER_REQUESTButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Prayer Request
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFA178",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="QUESTIONButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Spiritual Question
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FD726D",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="HELP_REQUESTButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Community Need
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#B4B6BA",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="THOUGHTButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            What's on Your Mind
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 20,
            },
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
          ]
        }
      >
        <SvgMock
          color="#ECEEF2"
          width="21"
        />
        <Text
          style={
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "lineHeight": 24,
              "paddingHorizontal": 10,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Post as Owner/Admin
        </Text>
        <SvgMock
          color="#ECEEF2"
          width="21"
        />
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#505256",
              "borderRadius": 50,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "space-between",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingLeft": 20,
              "paddingRight": 16,
              "paddingVertical": 0,
            }
          }
          testID="ANNOUNCEMENTButton"
        >
          <SvgMock
            color="#ffffff"
            height={24}
            style={
              Array [
                Object {
                  "marginLeft": -10,
                  "marginRight": 10,
                },
                undefined,
              ]
            }
            width={24}
          />
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Announcement
          </Text>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
